--- a/agree/res/values/dimens.xml
+++ b/agree/res/values/dimens.xml
@@ -20,5 +20,8 @@
     <dimen name="sidebar_text_size">10dp</dimen>
     <dimen name="image_thumbnail_size">100dp</dimen>
     <dimen name="image_thumbnail_spacing">1dp</dimen>
+    <dimen name="reg_verifycode_center_spacing">20dp</dimen>
+    <dimen name="reg_verifycode_character_spacing">25dp</dimen>
+    <dimen name="reg_verifycode_textsize">30dp</dimen>
 
 </resources>
