--- a/agree/res/layout/activity_time.xml
+++ b/agree/res/layout/activity_time.xml
@@ -5,21 +5,21 @@
     tools:context=".TimeActivity" >
 
     <RelativeLayout
-        android:id="@+id/time_title_layout"
+        android:id="@+id/Time_title_layout"
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
 
         <RelativeLayout
-            android:id="@+id/time_back_layout"
+            android:id="@+id/Time_back_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true" >
 
             <TextView
-                android:id="@+id/time_back"
+                android:id="@+id/Time_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -40,19 +40,19 @@
             android:textSize="18.0sp" />
 
         <RelativeLayout
-            android:id="@+id/time_next_layout"
+            android:id="@+id/Time_OK_layout"
             android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
 
             <TextView
-                android:id="@+id/time_next"
+                android:id="@+id/Time_OK"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="下一步"
+                android:text="完成"
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
         </RelativeLayout>
@@ -69,7 +69,7 @@
         android:id="@+id/ datePicker_layout"
         android:layout_width="match_parent"
         android:layout_height="300.0dp"
-        android:layout_below="@+id/time_title_layout"
+        android:layout_below="@+id/Time_title_layout"
         android:layout_centerHorizontal="true" >
 
         <LinearLayout
@@ -141,15 +141,40 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/TimePicker_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/ datePicker_layout"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50.0dp"
+         >
 
         <TimePicker
             android:id="@+id/timePicker"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/TimePicker_Time_text"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dp"
+        android:layout_below="@+id/ datePicker_layout"
+        android:layout_centerHorizontal="true"
+        android:background="#00e3e3"
+         >
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="设置聚会开始时间" 
+            android:textSize="17.0sp"
+            android:textColor="#ffffff"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
