--- a/agree/res/layout/fragment_schedule.xml
+++ b/agree/res/layout/fragment_schedule.xml
@@ -8,35 +8,66 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:id="@+id/Schedule_prompt_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:visibility="gone" >
+        android:layout_marginTop="0.50dp"
+        android:background="#efefef" >
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"
-            android:text="你还没有创建日程哦！"
-            android:textColor="#ff0000" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/Schedule_new_party_layout"
+            android:layout_width="match_parent"
+            android:layout_height="50.0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:background="#000000" >
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/schedule_swipe_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+            <TextView
+                android:id="@+id/Schedule_new_party"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="+ 组建新的聚会"
+                android:textColor="#ffffff"
+                android:textSize="17.0sp" />
+        </RelativeLayout>
 
-        <ListView
-            android:id="@+id/schedule_listview"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/schedule_swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/Schedule_new_party_layout" >
+
+            <ListView
+                android:id="@+id/schedule_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="#efefef" >
+            </ListView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <TextView
+            android:id="@+id/Schedule_prompt_new_party"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/Schedule_new_party_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"
+            android:text="请添加日程"
+            android:textColor="#00e3e3"
+            android:textSize="17.0sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" >
-        </ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_centerHorizontal="true"
+            android:background="#aaaaaa" />
+    </RelativeLayout>
 
 </RelativeLayout>
