--- a/agree/res/layout/plugin_camera_gallery.xml
+++ b/agree/res/layout/plugin_camera_gallery.xml
@@ -26,13 +26,13 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
 
-            <Button
-                android:id="@+id/send_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/ok_button" />
+<!--             <Button -->
+<!--                 android:id="@+id/send_button" -->
+<!--                 android:layout_width="40dp" -->
+<!--                 android:layout_height="40dp" -->
+<!--                 android:layout_centerHorizontal="true" -->
+<!--                 android:layout_centerVertical="true" -->
+<!--                 android:background="@drawable/ok_button" /> -->
         </RelativeLayout>
 
     </RelativeLayout>
